--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -34,8 +34,11 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /p:Platform=x86 ${{env.SOLUTION_FILE_PATH}}
-    - name: Upload
-      uses: actions/upload-artifact@v2
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        name: Release
-        path: ~/release/Squawks.dll
+          files: |
+            ${{env.GITHUB_WORKSPACE}}/Release/Squawks.dll
+            ${{env.GITHUB_WORKSPACE}}/NonDiscreteSquawk/squawks.json
+            LICENSE
